# learn-ocaml

./: README.md  dune  dune-project  real_world_ocaml.opam
adt/: adt2.ml  dune  recursive.ml
ch05/: counter.ml  counter_old.ml  dune  freq.ml  nested_mod_reuse.ml
ch07/: adt.ml  adt1.ml
ch08/: bench_backtraces.ml  blow_up.ml  dune  errhandling.ml  error_aware_types.ml  exceptions.ml
ch09/: ch9.ml  dictionary.ml  time_converter.ml
ch10/: ch10.ml  dune
ch11/: ch11.ml  dune
ch12/: ch12.ml  dune
ch15/: ch15.ml  dune
ch16/: cal.ml  calv2.ml  calv3.ml  ch16.ml  dune  md5.ml  md5v10.ml  md5v2.ml  md5v3.ml  md5v4.ml  md5v5.ml  md5v6.ml  md5v7.ml  md5v8.ml  md5v9.ml
ch21/: ch21.ml  dune
ch5/: counter.mli  counter_old.ml  counter_old.mli
ch7/: dune  poly.ml  term_colors_poly.ml  term_colors_poly.mli
ch8/: dune  handle_exn.ml
ch9/: ch9.ml  doubly_linked.ml  doubly_linked.mli  dune
counter/: dune
errhandling/: bench_backtraces.ml  blow_up.ml  errhandling.ml
nestedmods/: dune
variants/: dune  term_colors_poly.ml  variants.ml
